# w7w-core

./: Context.hs  MultiLang.hs  README.md  Utils.hs  slimlib.rb  stack.yml  w7w.cabal
Compilers/: Coffee.hs  Markdown.hs
Pictures/: Context.hs  Utils.hs
Rules/: StaticPages.hs  Templates.hs
docs/: todo.org
scripts/: check-repo-is-clean.sh  picture-exif-info.sh  picture-histogram.sh  repo-md5-changes.sh
src/: Cache.hs  Config.hs  Context.hs  HasVersion.hs  ManyPages.hs  MonadCompiler.hs  MultiLang.hs  PictureColor.hs  Types.hs  Typography.hs  Utils.hs
src/Compilers/: Markdown.hs  Slim.hs
src/Context/: Media.hs
src/ExifInfo/: Parser.hs
src/Labels/: Context.hs  Types.hs
src/ManyPages/: Config.hs  Context.hs  Rules.hs
src/PictureColor/: Parser.hs  Types.hs
src/Pictures/: Context.hs  Rules.hs
src/Rules/: Assets.hs  StaticPages.hs  Templates.hs
src/W7W/: Cache.hs  Context.hs  ExifInfo.hs  HasVersion.hs  MonadCompiler.hs  MultiLang.hs  PictureColor.hs  Typography.hs
src/W7W/Compilers/: Markdown.hs  W7WPandoc.hs
src/W7W/ExifInfo/: Types.hs
src/W7W/HasVersion/: Context.hs
src/W7W/Labels/: Context.hs  Parser.hs
src/W7W/ManyPages/: Config.hs  Context.hs  Rules.hs
src/W7W/PictureColor/: Operations.hs
src/W7W/Pictures/: Rules.hs
src/W7W/Rules/: Assets.hs  StaticPages.hs  Templates.hs
